# schoolhouse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
codewars/digital_root/: digital_root.py
codewars/digital_root/digital_root/: Cargo.toml
codewars/digital_root/digital_root/src/: main.rs
euler/: CMakeLists.txt
euler/p0001/: CMakeLists.txt  cli.cpp  multiples_of.cpp  multiples_of.hpp  sol.cpp  sol2.cpp  test.cpp
euler/p0002/: CMakeLists.txt  sol.cpp  sol2.cpp
euler/p0003/: CMakeLists.txt  sol.cpp
euler/p0004/: CMakeLists.txt  sol.cpp
euler/p0005/: CMakeLists.txt  sol.cpp  sol2.cpp
euler/p0006/: CMakeLists.txt  sol.cpp  sol2.cpp
euler/p0008/: CMakeLists.txt  sol.cpp
euler/p0009/: CMakeLists.txt  sol.cpp
euler/p0010/: CMakeLists.txt  sol.cpp
euler/p0011/: CMakeLists.txt  sol.cpp
pppcpp/: CMakeLists.txt
pppcpp/chp04/: CMakeLists.txt
pppcpp/chp04/02_median_temp/: CMakeLists.txt  cli.cpp  median_temp.cpp  median_temp.hpp  test.cpp
pppcpp/chp04/03_city_dist/: CMakeLists.txt  city_dist.cpp  city_dist.hpp  cli.cpp  test.cpp
pppcpp/chp04/04_guess/: CMakeLists.txt  guess.cpp
pppcpp/test/: CMakeLists.txt
programmingrust/iron-gcd/: Cargo.toml
programmingrust/iron-gcd/src/: '  main.rs
programmingrust/mandelbrot/: Cargo.toml
programmingrust/mandelbrot/src/: main.rs
programmingrust/ranges/: Cargo.toml
programmingrust/ranges/src/: lib.rs
programmingrust/refex/: Cargo.toml
programmingrust/refex/src/: main.rs
rustlings/: quiz1.rs
scratchpad/str2hex/: Cargo.toml
scratchpad/str2hex/src/: main.rs
testframeworks/: CMakeLists.txt
testframeworks/catch/: CMakeLists.txt
